添加日期K线、分钟K线、2档盘口、5档盘口、分笔的定义和测试程序入口。 add the definitions of DateBar, MinuteBar, Quote2, Quote5, QuoteDiff and the test entry point.

--- a/QilHost/CMakeLists.txt
+++ b/QilHost/CMakeLists.txt
@@ -5,10 +5,41 @@
 # Set the C++ standard.
 set(CMAKE_CXX_STANDARD 20)
 
+# Glob all files ended with .h and .cpp in the folders.
+file (GLOB QILHOST_SRCS CONFIGURE_DEPENDS "src/QilHost*.cpp")
+file (GLOB QILHOST_HEADERS CONFIGURE_DEPENDS "include/QilHost*.h")
+
 # Add source to this project's executable.
 add_executable (
 	QilHostExecute
 	"apps/QilHost.cpp" 
 	"apps/QilHost.h"
+ 		${QILHOST_SRCS}
+	${QILHOST_HEADERS}
 )
 
+# Add source to the project's static library.
+add_library(
+	QilHostStatic
+	STATIC
+		${QILHOST_SRCS}
+	${QILHOST_HEADERS}
+)
+
+target_include_directories(
+	QilHostStatic 
+	PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>"	
+)
+
+# Test option
+set(QILHOST_BUILD_TESTS ON)
+
+if (QILHOST_BUILD_TESTS)
+
+	# Enable testing for current directory and below.
+	enable_testing()
+
+	# Add a subdirectory to the build.
+	add_subdirectory("tests")
+
+endif()
