--- a/QilHost/tests/CMakeLists.txt
+++ b/QilHost/tests/CMakeLists.txt
@@ -21,6 +21,16 @@ include(CTest)
 include(Catch)
 
 # Define the target
+add_executable(TestQilHostFileTd "TestQilHostFileTd.cpp")
+
+# Specify that the target uses the Catch2 library and needs this library to provide a main function for running test cases.
+target_link_libraries(TestQilHostFileTd PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(TestQilHostFileTd PUBLIC QilHostStatic)
+
+# Catch2 helper function that registers each Catch2 TEST_CASE as a single CTest test, which is then run in a separate process. 
+catch_discover_tests(TestQilHostFileTd)
+
+# Define the target
 add_executable(TestQilHostSecurity "TestQilHostSecurity.cpp")
 
 # Specify that the target uses the Catch2 library and needs this library to provide a main function for running test cases.
