切换至Direct2D硬件加速引擎和永久免费商用字体。switch to Direct2D and a free font display.

--- a/QilD2d/CMakeLists.txt
+++ b/QilD2d/CMakeLists.txt
@@ -8,6 +8,9 @@ set(CMAKE_CXX_STANDARD 20)
 # https://cmake.org/cmake/help/v2.8.8/cmake.html Build an executable with a WinMain entry point on windows.
 set(CMAKE_WIN32_EXECUTABLE TRUE) # When this property is set to true the executable when linked on Windows will be created with a WinMain() entry point instead of of just main().This makes it a GUI executable instead of a console application.
 
+# Copy font files to the build directory
+file(COPY ${CMAKE_SOURCE_DIR}/AlibabaPuHuiTi-3-55-Regular.ttf DESTINATION ${CMAKE_BINARY_DIR})
+
 # Add source to this project's executable.
 add_executable (
 	QilD2dExecute
