--- a/QilHost/CMakeLists.txt
+++ b/QilHost/CMakeLists.txt
@@ -5,6 +5,10 @@
 # Set the C++ standard.
 set(CMAKE_CXX_STANDARD 20)
 
+include(FetchContent)
+FetchContent_Declare(spdlog	URL https://github.com/gabime/spdlog/archive/refs/tags/v1.15.3.tar.gz) # GIT_REPOSITORY is painful to fetch when network is indirect, change as you wish.
+FetchContent_MakeAvailable(spdlog)
+
 # Glob all files ended with .h and .cpp in the folders.
 file (GLOB QILHOST_SRCS CONFIGURE_DEPENDS "src/QilHost*.cpp")
 file (GLOB QILHOST_HEADERS CONFIGURE_DEPENDS "include/QilHost*.h")
@@ -30,6 +34,9 @@ target_include_directories(
 	QilHostStatic 
 	PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>"	
 )
+
+target_link_libraries(QilHostExecute PUBLIC spdlog::spdlog)
+target_link_libraries(QilHostStatic PUBLIC spdlog::spdlog)
 
 # Test option
 set(QILHOST_BUILD_TESTS ON)
