添加http应用程序入口。 add the http application entry point.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,7 @@ project ("QuantIsLearning")
 add_subdirectory ("QilHost")
 
 # Include sub-projects.
+add_subdirectory ("QilHttp")
+
+# Include sub-projects.
 add_subdirectory ("QilD2d")
